@@ -9,8 +9,14 @@ IF(NOT AFFACTIONPRIMITIVES_FOUND)
     
     IF(NESTED_BUILD)
     
-      SET(AFFACTIONPRIMITIVES_LIBRARIES affActionPrimitives)
-    
+        IF(WIN32 AND NOT CYGWIN)
+           FIND_LIBRARY(AFFACTIONPRIMITIVES_LIBRARIES_RELEASE affActionPrimitives  ${ICUB_DIR}/lib/Release NO_DEFAULT_PATH)
+           FIND_LIBRARY(AFFACTIONPRIMITIVES_LIBRARIES_DEBUG   affActionPrimitivesd ${ICUB_DIR}/lib/Debug   NO_DEFAULT_PATH)
+           SET(AFFACTIONPRIMITIVES_LIBRARIES optimized ${AFFACTIONPRIMITIVES_LIBRARIES_RELEASE} debug ${AFFACTIONPRIMITIVES_LIBRARIES_DEBUG})
+        ELSE(WIN32 AND NOT CYGWIN)
+           SET(AFFACTIONPRIMITIVES_LIBRARIES affActionPrimitives)
+        ENDIF(WIN32 AND NOT CYGWIN)
+
     ELSE(NESTED_BUILD)
     
       FIND_LIBRARY(AFFACTIONPRIMITIVES_LIBRARIES affActionPrimitives ${ICUB_DIR}/lib ${LIB_DIR})  
@@ -19,7 +25,7 @@ IF(NOT AFFACTIONPRIMITIVES_FOUND)
     
         FIND_LIBRARY(AFFACTIONPRIMITIVES_LIBRARIES_RELEASE affActionPrimitives 
     		         ${ICUB_DIR}/lib/Release ${LIB_DIR}/Release NO_DEFAULT_PATH)
-        FIND_LIBRARY(AFFACTIONPRIMITIVES_LIBRARIES_DEBUG affActionPrimitives 
+        FIND_LIBRARY(AFFACTIONPRIMITIVES_LIBRARIES_DEBUG affActionPrimitivesd 
     		         ${ICUB_DIR}/lib/Debug ${LIB_DIR}/Debug NO_DEFAULT_PATH)
     
         IF(AFFACTIONPRIMITIVES_LIBRARIES_RELEASE AND NOT AFFACTIONPRIMITIVES_LIBRARIES_DEBUG)
