@@ -25,6 +25,10 @@ IF(MSVC)
    SET_TARGET_PROPERTIES(${PROJECTNAME} PROPERTIES COMPILE_FLAGS /wd4996)
 ENDIF(MSVC)
 
+IF (WIN32 AND NOT CYGWIN)
+   SET_TARGET_PROPERTIES(${PROJECTNAME} PROPERTIES DEBUG_POSTFIX "d")
+ENDIF (WIN32 AND NOT CYGWIN)
+
 INSTALL(TARGETS ${PROJECTNAME} DESTINATION lib)
 INSTALL(FILES ${folder_header} DESTINATION include/iCub)
 
