@@ -30,6 +30,10 @@ INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
 
 ADD_LIBRARY(${PROJECTNAME} ${folder_source} ${folder_header})
 
+IF (WIN32 AND NOT CYGWIN)
+   SET_TARGET_PROPERTIES(${PROJECTNAME} PROPERTIES DEBUG_POSTFIX "d")
+ENDIF (WIN32 AND NOT CYGWIN)
+
 INSTALL(TARGETS ${PROJECTNAME} DESTINATION lib)
 INSTALL(FILES ${folder_header} DESTINATION include/iCub)
 
