@@ -9,7 +9,13 @@ IF(NOT CTRLLIB_FOUND)
     
     IF(NESTED_BUILD)
     
-      SET(CTRLLIB_LIBRARIES ctrlLib)
+      IF(WIN32 AND NOT CYGWIN)
+         FIND_LIBRARY(CTRLLIB_LIBRARIES_RELEASE ctrlLib  ${ICUB_DIR}/lib/Release NO_DEFAULT_PATH)
+         FIND_LIBRARY(CTRLLIB_LIBRARIES_DEBUG   ctrlLibd ${ICUB_DIR}/lib/Debug   NO_DEFAULT_PATH)
+         SET(CTRLLIB_LIBRARIES optimized ${CTRLLIB_LIBRARIES_RELEASE} debug ${CTRLLIB_LIBRARIES_DEBUG})
+      ELSE(WIN32 AND NOT CYGWIN)
+         SET(CTRLLIB_LIBRARIES ctrlLib)
+      ENDIF(WIN32 AND NOT CYGWIN)
     
     ELSE(NESTED_BUILD)
     
@@ -19,7 +25,7 @@ IF(NOT CTRLLIB_FOUND)
     
         FIND_LIBRARY(CTRLLIB_LIBRARIES_RELEASE ctrlLib 
     		         ${ICUB_DIR}/lib/Release ${LIB_DIR}/Release NO_DEFAULT_PATH)
-        FIND_LIBRARY(CTRLLIB_LIBRARIES_DEBUG ctrlLib 
+        FIND_LIBRARY(CTRLLIB_LIBRARIES_DEBUG ctrlLibd
     		         ${ICUB_DIR}/lib/Debug ${LIB_DIR}/Debug NO_DEFAULT_PATH)
     
         IF(CTRLLIB_LIBRARIES_RELEASE AND NOT CTRLLIB_LIBRARIES_DEBUG)
