@@ -22,11 +22,17 @@ IF(NOT IKIN_FOUND)
     
     
     IF(NESTED_BUILD)
-    
+
+      IF(WIN32 AND NOT CYGWIN)
+         FIND_LIBRARY(IKIN_LIBRARIES_RELEASE iKin  ${ICUB_DIR}/lib/Release NO_DEFAULT_PATH)
+         FIND_LIBRARY(IKIN_LIBRARIES_DEBUG   iKind ${ICUB_DIR}/lib/Debug   NO_DEFAULT_PATH)
+         SET(IKIN_LIBRARIES optimized ${IKIN_LIBRARIES_RELEASE} debug ${IKIN_LIBRARIES_DEBUG})
+      ELSE(WIN32 AND NOT CYGWIN)
+         SET(IKIN_LIBRARIES iKin)
+      ENDIF(WIN32 AND NOT CYGWIN)
+
       IF(IPOPT_FOUND)
-        SET(IKIN_LIBRARIES iKin ${IPOPT_LIB})
-      ELSE(IPOPT_FOUND)
-        SET(IKIN_LIBRARIES iKin)
+        SET(IKIN_LIBRARIES ${IKIN_LIBRARIES} ${IPOPT_LIB})
       ENDIF(IPOPT_FOUND)
     
     ELSE(NESTED_BUILD)
@@ -35,9 +41,9 @@ IF(NOT IKIN_FOUND)
     
       IF(NOT IKIN_LIBRARIES)
     
-        FIND_LIBRARY(IKIN_LIBRARIES_RELEASE iKin 
+        FIND_LIBRARY(IKIN_LIBRARIES_RELEASE iKin
     		         ${ICUB_DIR}/lib/Release ${LIB_DIR}/Release NO_DEFAULT_PATH)
-        FIND_LIBRARY(IKIN_LIBRARIES_DEBUG iKin 
+        FIND_LIBRARY(IKIN_LIBRARIES_DEBUG iKind
     		         ${ICUB_DIR}/lib/Debug ${LIB_DIR}/Debug NO_DEFAULT_PATH)
     
         IF(IKIN_LIBRARIES_RELEASE AND NOT IKIN_LIBRARIES_DEBUG)
