@@ -28,6 +28,12 @@ INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
 
 # Create everything needed to build our executable.
 ADD_LIBRARY(${PROJECTNAME} ${folder_source} ${folder_header})
+
+# Add a postfix for debug library only in Windows
+IF (WIN32 AND NOT CYGWIN)
+   SET_TARGET_PROPERTIES(${PROJECTNAME} PROPERTIES DEBUG_POSTFIX "d")
+ENDIF (WIN32 AND NOT CYGWIN)
+
 INSTALL(TARGETS ${PROJECTNAME} DESTINATION lib)
 INSTALL(FILES ${folder_header} DESTINATION include/iCub)
 
